--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./dist/styles/main.css">
 </head>
 <body>
-    
+    <h1>Olá</h1>
+    <section class=".hero"></section>
 </body>
 </html>
